--- a/public/web/app/index.html
+++ b/public/web/app/index.html
@@ -58,6 +58,7 @@
         <script src="bower_components/d3/d3.js"></script>
         <script src="bower_components/nvd3/build/nv.d3.js"></script>
         <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -69,9 +70,6 @@
 		<script src="modules/_application/application.module.js"></script>
 		<script src="modules/_application/application.route.js"></script>
 		<script src="modules/_application/application.controller.js"></script>
-		<script src="modules/index/index.module.js"></script>
-		<script src="modules/index/index.route.js"></script>
-		<script src="modules/index/index.controller.js"></script>
 		<script src="common/core/ntranslate/ntranslate.module.js"></script>
 		<script src="common/core/ntranslate/ntranslate.provider.js"></script>
 		<script src="common/core/ntranslate/ntranslate.factory.js"></script>
@@ -79,6 +77,14 @@
 		<script src="common/socket/socket.factory.js"></script>
 		<script src="models/todos/TodosService.module.js"></script>
 		<script src="models/todos/TodosService.service.js"></script>
+		<script src="models/todos/TodoFactory.factory.js"></script>
+		<script src="modules/todos/todos.module.js"></script>
+		<script src="modules/todos/todos.route.js"></script>
+		<script src="modules/todos/todos.controller.js"></script>
+		<script src="modules/todos/single/single.controller.js"></script>
+		<script src="modules/todos/create/create.controller.js"></script>
+		<script src="modules/todos/list/list.controller.js"></script>
+		<script src="modules/todos/delete/delete.controller.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
