socket pull/push

--- a/public/web/app/modules/todos/list/list.template.html
+++ b/public/web/app/modules/todos/list/list.template.html
@@ -1,4 +1,6 @@
-Her er tod-list
+<button class="button" ng-click="todosList.pullList()">
+    emit 'todos:pullList'
+</button>
 <a class="button" ui-sref="application.todos.single">
     Create
 </a>
@@ -24,10 +26,10 @@ Her er tod-list
         <h2>DENNIS DU SKAL:</h2>
         <ul>
             <li>
-                Finde et system ala lodash-konceptet, fordi: skal kunne finde noget i min interne collection og opdatere det på baggrund af WS
+                Finde et system ala lodash-konceptet, fordi: skal kunne finde noget i min interne collection og opdatere det pï¿½ baggrund af WS
             </li>
             <li>
-                kunne være nice at det ikke er JS data etc, men er et hjemme lavet simpelt system...
+                kunne vï¿½re nice at det ikke er JS data etc, men er et hjemme lavet simpelt system...
             </li>
         </ul>
     </div>
