Much Rejoice with sockets

--- a/public/web/app/index.html
+++ b/public/web/app/index.html
@@ -59,6 +59,8 @@
         <script src="bower_components/nvd3/build/nv.d3.js"></script>
         <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
         <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
+        <script src="bower_components/rxjs/dist/rx.all.js"></script>
+        <script src="bower_components/angular-rx/dist/rx.angular.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
