CRUD + Sockets = Cruckets?

--- a/public/web/app/modules/_application/application.template.html
+++ b/public/web/app/modules/_application/application.template.html
@@ -1,29 +1,2 @@
-<p>This is the application view.</p>
-<!--<p>Connected to socket? {{application.isConnected}}</p>-->
-<!--<button ng-click="application.establishStream()">-->
-    <!--Start streaming-->
-<!--</button>-->
-<!--<button ng-click="application.cancelStream()">-->
-    <!--Stop streaming-->
-<!--</button>-->
-
-<!--<nvd3 options="application.chartOptions"-->
-      <!--data="chart"-->
-      <!--config="{refreshDataOnly: true, deepWatchData: true}"-->
-      <!--class="with-transitions"></nvd3>-->
-
-<!--<pre><code>-->
-<!--{{chart | json}}-->
-<!--</code></pre>-->
-
-<!--<hr/>-->
-
-<!--<button ng-click="application.getTodosList()">Get Todos</button>-->
-<!--<ul>-->
-    <!--<li ng-repeat="todo in application.todos">-->
-        <!--{{todo}}-->
-    <!--</li>-->
-<!--</ul>-->
-<!--<button ng-click="application.createTodo()">Create Todo</button>-->
-
+<h1>Todos cloud <small>users: {{application.userCount}}</small></h1>
 <div ui-view="application"></div>
