--- a/public/web/app/modules/todos/todos.template.html
+++ b/public/web/app/modules/todos/todos.template.html
@@ -1,2 +1,14 @@
 <p>This is the todos view.</p>
+<p>Todo:</p>
+<ul>
+    <li>
+        Create / Delete modals
+    </li>
+    <li>
+        List components
+    </li>
+    <li>
+        Form validation
+    </li>
+</ul>
 <div ui-view="todoView"></div>
